# orze

./: .gitignore  .mcp.json  AGENT.md  CHANGELOG.md  CHANGELOG_FSM.txt  CLAUDE.md  LICENSE  MARKETING.md  README.md  RULES.md  SKILL.md  archive_ideas.py  bot.py  bug_fixer.py  farm.py  hf_discover.py  idea_lake.py  ideas.md  install.sh  manual_notify.py  orze.yaml.example  orze_gc.py  pyproject.toml  rebuild_lake.py  research_agent.py  setup.sh  train_idea.py
.claude/agent-memory/asr-research-engineer/: MEMORY.md  project_8b_eval_results.md
.claude/agent-memory/ui-monitor/: MEMORY.md  debugging.md
.claude/agents/: orze-distributed-fs.md  release-engineer.md  ui-monitor.md
admin/: server.py
admin/ui/: index.html  package.json  vite.config.ts
admin/ui/src/: AlertsTab.tsx  App.tsx  FleetTab.tsx  LeaderboardTab.tsx  OverviewTab.tsx  QueueTabView.tsx  RunsTab.tsx  SettingsTab.tsx  api.ts  components.tsx  hooks.ts  index.css  types.ts
configs/: base.yaml
docs/: DISTRIBUTED.md  adapters.md  audit_v3_6_2.md  determinism_debuggability_analysis.md  determinism_hardening.md  evo_score.md
src/orze/: AGENT.md  __init__.py  artifact_catalog.py  cli.py  cli_demo.py  cli_interactive.py  cli_pro.py  cli_setup.py  cli_star.py  extensions.py  idea_lake.py  lifecycle.py  manual_notify.py  rebuild_lake.py  sop_base.py  sop_dispatcher.py  sop_registry.py
src/orze/admin/: ideas_inject.py  mcp.py  reset_role_state.py  server.py
src/orze/admin/ui/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/orze/admin/ui/src/: AlertsTab.tsx  App.tsx  FleetTab.tsx  IdeaDetailContext.tsx  (+13 more)
src/orze/agents/: analyst_bridge.py  archive_ideas.py  bot.py  bug_fixer.py  code_evolution.py  hf_discover.py  ingest_champion.py  manual_notify.py  meta_research.py  orze_gc.py  rebuild_lake.py  research.py  research_context.py  research_llm.py  search_role.py  train_idea.py
src/orze/benchmarks/: __init__.py
src/orze/core/: __init__.py  config.py  fs.py  ideas.py  integrity.py  medal.py
src/orze/data_boundaries/: __init__.py  wrap.py
src/orze/engine/: __init__.py  agg_search.py  aggregations.py  analysis.py  auto_ideas.py  bundle_combiner.py  champion_guard.py  cluster.py  code_change.py  collab_bus.py  compactor.py  competition_diagnosis.py  config_dedup.py  diversity_tracker.py  evaluator.py  experiment_analysis.py  failure.py  failure_analysis.py  family_guard.py  gpu_slots.py  guardrails.py  health.py  intervention_detect.py  launcher.py  leader.py  lifecycle.py  metric_harvester.py  migrate.py  orchestrator.py  phases.py  posthoc_adapters  posthoc_runner.py  process.py  rebuild_state.py  reporter.py  retrospection.py  role_runner.py  roles.py  scheduler.py  sealed.py  (+7 more)
src/orze/engine/posthoc_adapters/: __init__.py  example_classifier.py  nexar_collision.py
src/orze/fsm/: runner.py
src/orze/fsm/plugins/: idea_lifecycle_fsm.py
src/orze/hardware/: __init__.py  gpu.py
src/orze/journal/: __init__.py
src/orze/migrations/: v45_genericize_fsm.py
src/orze/reporting/: __init__.py  leaderboard.py  leaderboard_admin.py  notifications.py  search_path.py  state.py
src/orze/research/: context_builder.py
src/orze/service/: install.py  status.py  watchdog.py
src/orze/shims/: __init__.py  claude.py  llm.py
src/orze/skills/: core.skill.md  loader.py  ops.skill.md  receipts.py  registry.py  release.skill.md  research.skill.md  setup.skill.md  triggers.py
tests/: conftest.py  test_agg_search.py  test_aggregations.py  test_analyst_bridge.py  test_artifact_catalog.py  test_auto_ideas_fanout.py  test_benchmark_preset.py  test_bundle_combiner.py  test_champion_guard.py  test_compactor.py  test_config_dedup_keyset.py  test_config_dedup_rebuild_and_recover.py  test_config_dedup_wiring.py  test_corruption_detector.py  test_dead_pid_reconcile.py  test_determinism_hardening_1_2.py  test_determinism_hardening_4.py  test_e2e_search.py  test_eval_invalid_metrics_requeue.py  test_evolution.py  test_example_classifier_adapter.py  test_failure_traceback.py  test_fleet_scheduler.py  test_fsm_e2e.py  test_fsm_integration.py  test_honest_eval.py  test_hot_reload_env_expansion.py  test_idea_kind.py  test_ideas_sidecar.py  test_ingest_champion.py  test_integration.py  test_intervention_detect.py  test_journal.py  test_leader.py  test_metric_harvester.py  test_migrations_v0_v1.py  test_nested_config_normalize.py  test_nested_config_validator.py  test_notifications_needs_intervention.py  test_orze_dir_layout.py  (+25 more)
